--- a/instagram-clone/package.json
+++ b/instagram-clone/package.json
@@ -7,7 +7,9 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.3.0",
+    "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
